--- a/W10_MaskMap/index.html
+++ b/W10_MaskMap/index.html
@@ -28,6 +28,7 @@
                 <button class="close-button" @click="noticeOpen = false">×</button>
                 <ul class="list">
                     <div class="title">使用須知</div>
+                    <li class="item">無販售口罩或已售完之藥局不會顯示在地圖中。</li>
                     <li class="item">部分藥局因採發放號碼牌方式，方便民眾購買口罩，<strong>系統目前無法顯示已發送號碼牌數量</strong>。</li>
                     <li class="item">口罩數量以藥局實際存量為主，<strong>線上查詢之數量僅供參考</strong>。</li>
                     <li class="item">若您的藥局有需要加註的公告事項，可以填寫<a href="https://pse.is/KH7DC">此表單</a>。</li>
